methods.basics.MethodsDogHouse.scala.error
Erreur de compilation :
MethodsDogHouse:24: error: not found: value dogHouse
		dogHouse();
                ^MethodsDogHouse:30: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:40: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:50: error: not found: value dogHouse
		dogHouse();		
                ^