methods.basics.MethodsDogHouse.scala.code
def DogHouse(){
  for (i<-1 to 7)
  {
    avance()
  }
  gauche()
    for (i<-1 to 7)
  {
    avance()
  }
  droite()
}


	for(i<- 1 to 7)
	{
  	DogHouse();
	}